--- a/business_card.css
+++ b/business_card.css
@@ -12,7 +12,7 @@
     text-decoration: none;
 }
 .card {
-    width: 400px;
+    max-width: 400px;
     border: 1px dotted yellowgreen;
     text-align: center;
     padding: 20px;
